fix gap with button

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -202,7 +202,7 @@ button{
 }
 
 #home-section{
-    height: calc(100vh - 150px);
+    height: calc(100vh - 110px);
     max-width: 100%;
     overflow: hidden;
     box-sizing:border-box;
